--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
 		"jsonwebtoken": "^9.0.1",
 		"nodemon": "^3.0.1",
 		"prisma": "^5.0.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
-		"@types/cookie-parser": "^1.4.3"
+		"@types/cookie-parser": "^1.4.3",
+		"@types/swagger-jsdoc": "^6.0.1",
+		"@types/swagger-ui-express": "^4.1.3"
 	}
 }
