--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
 		"@types/node": "^20.4.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
+		"cloudinary": "^1.40.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
+		"multer": "^1.4.5-lts.1",
+		"multer-storage-cloudinary": "^4.0.0",
 		"nodemon": "^3.0.1",
 		"prisma": "^5.0.0",
 		"swagger-jsdoc": "^6.2.8",
@@ -33,6 +36,7 @@
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.3",
 		"@types/swagger-jsdoc": "^6.0.1",
-		"@types/swagger-ui-express": "^4.1.3"
+		"@types/swagger-ui-express": "^4.1.3",
+		"@types/multer": "^1.4.7"
 	}
 }
