--- a/.env.local
+++ b/.env.local
@@ -2,5 +2,6 @@ DATABASE_URL=YOUR_MONGODB_URL
 PORT=3000
 
 CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_FOLDER_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
