--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 	"scripts": {
 		"dev": "nodemon index.ts"
 	},
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
 	"dependencies": {
 		"@prisma/client": "^5.0.0",
 		"@types/bcryptjs": "^2.4.2",
@@ -34,9 +37,10 @@
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.0.2",
 		"@types/cookie-parser": "^1.4.3",
+		"@types/multer": "^1.4.7",
 		"@types/swagger-jsdoc": "^6.0.1",
-		"@types/swagger-ui-express": "^4.1.3",
-		"@types/multer": "^1.4.7"
+		"@types/swagger-ui-express": "^4.1.3"
 	}
 }
