--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"multer-storage-cloudinary": "^4.0.0",
 		"nodemon": "^3.0.1",
 		"prisma": "^5.1.1",
+		"slugify": "^1.6.6",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.0",
 		"ts-node": "^10.9.1",
