--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"nodemon": "^3.0.1",
 		"prisma": "^5.1.1",
 		"slugify": "^1.6.6",
+		"stripe": "^13.0.0",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.0",
 		"ts-node": "^10.9.1",
