--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,6 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_FOLDER_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLIC_KEY=
